--- a/mobile_app/package.json
+++ b/mobile_app/package.json
@@ -10,8 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "haversine": "^1.1.1",
+    "pubnub-react": "^1.3.2",
     "react": "16.9.0",
     "react-native": "0.61.4",
+    "react-native-geolocation-service": "^3.1.0",
     "react-native-maps": "^0.26.1",
     "react-native-maps-directions": "^1.7.3"
   },
