--- a/mobile_app/package.json
+++ b/mobile_app/package.json
@@ -14,9 +14,11 @@
     "pubnub-react": "^1.3.2",
     "react": "16.9.0",
     "react-native": "0.61.4",
+    "react-native-button-component": "^0.2.28",
     "react-native-geolocation-service": "^3.1.0",
     "react-native-maps": "^0.26.1",
-    "react-native-maps-directions": "^1.7.3"
+    "react-native-maps-directions": "^1.7.3",
+    "react-native-really-awesome-button": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "7.7.2",
